--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="container">
 
     <!-- HER NAME -->
-    <div class="name">Kenesha 💖</div>
+    <div class="name">Kennesha 💖</div>
 
     <h1>Will you be my Valentine?</h1>
 
@@ -112,11 +112,9 @@
   </div>
 
   <!-- Love Song -->
-  <audio id="loveSong">
-    <source
-      src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_4c6b7d7c2a.mp3?filename=romantic-love-112199.mp3"
-      type="audio/mpeg"
-    />
+  <audio id="loveSong" loop>
+    <source src="ill-call-you-back.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
   </audio>
 
   <script>
